# django-classy-settings

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
cbs/: __init__.py  cast.py  context_processors.py  env.py  settings.py  toggle.py  urls.py  utils.py
cbs/base/: __init__.py  django16.py  django17.py  django18.py  django19.py
docs/: .changelog.rst.swp  Makefile  api.rst  changelog.rst  conf.py  index.rst  make.bat  simple.rst  tips.rst
example/settings/: __init__.py  base.py  local.py  staging.py
src/cbs/: __init__.py  cast.py  env.py  settings.py  urls.py  version.py
tests/: settings.py  test_apply.py  test_cast.py  test_core.py  test_django.py  test_django_default_settings.py  test_env.py  test_global.py  test_urls.py  test_use.py  test_utils.py
