[project]
name = "django-classy-settings"
description = "Simple class-based settings for Django"
readme = "README.md"

authors = [
    {name = "Curtis Maloney", email = "curtis@tinbrain.net" },
]

license.text = "BSD-2-Clause"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
]

requires-python = ">= 3.7"

dependencies = [
    "django",
]

dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/funkybob/django-classy-settings"
"Documentation" = "https://django-classy-settings.readthedocs.io/en/latest/"

[tool.setuptools.dynamic]
version.attr = "cbs.version.__version__"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff",
    "Sphinx",
]

[tool.poetry]

packages = [
    { include = "cbs" },
]

[tool.coverage.run]
command_line = "-m pytest"
branch = true

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    'E',
    'F',
    'W',
    'I', # isort
    'N',
    'UP',
    'S', # bandit (security)
    'A', # builtins
    'C', # commas
    'C4', # comprehensions
    'DTZ', # datetimez
    'ISC', # implicit string concat
    'PIE',
    'ARG', # unused arguments
    'PL', # pylint
    'FLY', # f-string usages
    'PERF',
    'RUF', # ruff specific
]

ignore = [
    "ISC001",  # conflicts with ruff formatter
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double" # Lower chance of needing to escape; ' appears in strings more often than "

docstring-code-format = false

[tool.ruff.lint.isort]
section-order = [
    'future',
    'standard-library',
    'third-party',
    'first-party',
    'local-folder',
]
